# batman

./: .gitignore  BENCHMARK.md  DOCUMENTATION_SETUP.md  Makefile  README.md  SSHFS_SETUP.md  finetune_rfdetr.ipynb  finetune_rfdetr.py  import_data.py  main.py  mkdocs.yml  mount_gpu.sh  pyproject.toml  requirements-cluster.txt  requirements-docs.txt  submit_benchmark.sh  submit_inference.sh  submit_train.sh  test_rfdetr.ipynb  test_sam3.ipynb  umount_gpu.sh  windows_setup.md
.cursor/rules/: mkdocs-rule.mdc
backend/: __init__.py
backend/app/: config.py  database.py  main.py
cli/: __init__.py  benchmark_latency.py  classes.py  compare_latency.py  create_latency_video.py  create_sidebyside_video.py  importer.py  inference.py  train.py
docs/: README.md  getting-started.md  index.md  metrics-explained.html
docs/api/: index.md
docs/cli/: benchmark-latency.md  classes.md  compare-latency.md  create-latency-video.md  create-sidebyside-video.md  importer.md  index.md  inference.md  train.md
docs/guides/: benchmarking.md  experiments.md  inference.md  slurm.md  training.md
docs/javascripts/: command-builder.js
docs/scripts/: index.md  run-dev.md  submit-benchmark.md  submit-inference.md  submit-train.md
docs/stylesheets/: extra.css
experiments/: README.md  __init__.py  collect_results.py  resume_experiments.py  run_all.sh  train_experiment.py
experiments/conf/: config.yaml
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: fiftyone_viewer.py  run_dev.sh
src/: __init__.py
(+51 files in other folders)
